cursive-bootstrap/tests/ui/E-TYP/E-TYP-2307.cursive
// RUN: compile-fail
// DIAG: E-TYP-2307
// SPEC: 8.15
// DESC: Infinite monomorphization detected

record Loop<T> {
    value: Loop<Loop<T>>  //~ ERROR E-TYP-2307: infinite monomorphization
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
